Changes in QMPlay2 build 17.03.12:
	- playlists from MediaBrowser and YouTube are no longer loaded by temporary file,
	- replace Http class by NetworkAccess and use it in more places,
	- use Freedesktop notifications for all notifications (option),
	- use macOS native notifications for additional notifications,
	- option to enable/disable still images (disabled by default),
	- show notification about new version on Linux and macOS,
	- save playlists with relative file path (autodetection),
	- add XSPF support (thanks Zamarin Arthur for help),
	- merge ProstoPleer and SoundCloud in MediaBrowser,
	- allow to load profile from command line argument,
	- move YouTubeDL from YouTube to shared library:
		- "youtube-dl" is downloaded automatically without question (if necessary),
		- you can see notifications about downloading/updating "youtube-dl",
		- "youtube-dl" can be removed from settings,
	- add Anime Odcinki and Wbijam to MediaBrowser,
	- rename "Notifies" module to "Notify" module,
	- add SoundCloud support (Zamarin Arthur),
	- CMake improvements for Windows host,
	- allow to run in portable mode,
	- move version to source file,
	- API versioning for modules,
	- add "appdata.xml" file,
	- add Tekstowo lyrics,
	- switch to C++11,
	- minor bugfix,

Changes in QMPlay2 build 17.02.12:
	- fix updating covers (also title, artist and album outside QMPlay2) in network streams,
	- add "Skip" and "Stop after" flags for playlist (Zamarin Arthur),
	- add "Lock" flag for playlist entry - don't allow to remove it,
	- equalizer improvements (presets must be set again),
	- display cover arts in Freedesktop notifications,
	- scale VU meters in Simple Visualization,
	- minor improvements and bug fixes,
	- add quick group synchronization,
	- add Profiles (Zamarin Arthur),
	- displaying still images,
	- add full macOS support,

Changes in QMPlay2 build 16.12.23:
	- new Notifications module (Zamarin Arthur),
	- use cookies obtained from "youtube-dl",