@@ -2090,6 +2090,10 @@ It copies decoded video frame to system RAM, so it can be slow!</source>
         <source>Mouse wheel changes the volume</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>Left mouse button on video dock toggles playback</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Player</name>
